<resources>
    <string name="app_name">달의 이야기</string>
    <string name="input_email">이메일을 입력해 주세요.</string>
    <string name="input_password">비밀번호를 입력해 주세요.</string>
    <string name="find_password">비밀번호 찾기 |</string>

    <string name="private_policy">https://darestory.notion.site/9bf44e2df14549fb8a40450301ad410f?pvs=4</string>
    <string name="service_policy">https://darestory.notion.site/73219f9850f94d5884dd2701697972dc?pvs=4</string>

    <!-- 단어 -->
    <string name="word_cancel">취소</string>
    <string name="word_confirm">확인</string>
    <string name="word_sign_up">회원가입</string>
    <string name="word_password">비밀번호</string>
    <string name="word_email">이메일</string>
    <string name="word_login">로그인</string>
    <string name="word_next">다음</string>
    <string name="word_male">남자</string>
    <string name="word_female">여자</string>
    <string name="word_nickname">닉네임</string>
    <string name="word_writer">작가</string>
    <string name="word_complete">완료</string>
    <string name="word_home">홈</string>
    <string name="word_discussion">토론장</string>
    <string name="word_my">My</string>
    <string name="word_sort_popular">인기순</string>
    <string name="word_sort_recent">최신순</string>
    <string name="word_sort_age">나이대</string>
    <string name="word_loading">로딩중...</string>
    <string name="word_comment">댓글</string>
    <string name="word_delete">삭제</string>
    <string name="word_dash">-</string>
    <string name="word_book">책</string>
    <string name="word_write">글쓰기</string>
    <string name="word_author">저자</string>
    <string name="word_description">줄거리</string>
    <string name="word_publisher">출판사</string>
    <string name="word_ask">문의하기</string>
    <string name="word_notice">공지사항</string>
    <string name="word_app_policy">서비스 이용약관</string>
    <string name="word_private_policy">개인정보처리 방침</string>
    <string name="word_app_version">앱 버전</string>
    <string name="word_logout">로그아웃</string>
    <string name="word_unregister">회원탈퇴</string>
    <string name="word_me">관리자</string>


    <!-- 로그인 -->
    <string name="login_error_toast">이메일 또는 비밀번호를 확인해주세요.</string>
    <string name="login_error_send_password_toast">이메일 전송에 실패했습니다.</string>
    <string name="login_success_send_password_toast">이메일 전송에 성공했습니다.</string>

    <!--회원가입 -->
    <string name="sign_up_first_page">1 / 3</string>
    <string name="sign_up_hint_email">DareStory123</string>
    <string name="sign_up_divide_email">\@</string>
    <string name="sign_up_naver_address">naver.com</string>
    <string name="sign_up_password_hint">********</string>
    <string name="sign_up_about_service_personal_info">가입을 진행할 경우, 서비스 이용약관 및\n개인정보처리 방침에 동의한 것으로 간주합니다.</string>

    <string name="sign_up_second_page">2 / 3</string>
    <string name="sign_up_who_r_u">작가님은\n어떤 사람인가요?</string>
    <string name="sign_up_hello">안녕하세요.</string>
    <string name="sign_up_end_sentence">입니다.</string>
    <string name="sign_up_age_is">나이는</string>
    <string name="sign_up_choice_age">나이 선택</string>
    <string name="sign_up_age_sentence_end">이고,</string>
    <string name="sign_up_gender_is">성별은</string>
    <string name="sign_up_error_email">이메일 중복</string>
    <string name="sign_up_more_8_password">비밀번호 8자리 이상</string>
    <string name="sign_up_nickname_terms_length">2~10자</string>
    <string name="sign_up_nickname_terms_duplicate">닉네임 중복</string>

    <string name="sign_up_third_page">3 / 3</string>
    <string name="sign_up_verify_complete">인증 완료</string>
    <string name="sign_up_verify_email">입력하신 메일 주소 (%s)로 인증 메일이 발송되었습니다.\n\n메일을 확인 하신 뒤 인증 링크를 클릭해주세요.\n\n혹시 메일을 받지 못하셨나요? 스팸함을 확인하거나,\n재발송이 필요한 경우 이곳 을 클릭해주세요</string>
    <string name="sign_up_email_verify_error_toast">이메일 인증이 완료되지 않았어요.</string>

    <!-- 홈 -->
    <string name="home_today_prose">오늘의 산문</string>
    <string name="home_all_prose">전체 산문</string>
    <string name="home_prose_comment_hint">당신의 생각을 적어주세요.</string>
    <string name="home_prose_main_author">%s 지음</string>
    <string name="home_prose_empty_comment">“댓글이 없네요\n 댓글을 첫번째로 남겨봐요”</string>
    <string name="home_detail_input_title">제목을 입력해주세요.</string>
    <string name="home_detail_input_content">내용을 입력해주세요.</string>
    <string name="home_prose_author_say">작가의 말(선택)</string>
    <string name="home_upload_complete">업로드가 완료되었습니다!</string>

    <!-- 바텀시트 -->
    <string name="bottom_sheet_edit">수정하기</string>
    <string name="bottom_sheet_delete">삭제하기</string>
    <string name="bottom_sheet_report">신고하기</string>
    <string name="bottom_sheet_bookmark">나만의 책에 담기</string>

    <!-- 신고 -->
    <string name="report_type">신고유형</string>
    <string name="report_whos_name">\"%s\"</string>
    <string name="report_who">님 신고하기</string>
    <string name="report_choice_type">신고 유형을 선택해주세요.</string>
    <string name="report_content">신고 내용</string>
    <string name="report_input_content">신고 내용</string>
    <string name="report_success">신고가 완료되었습니다.</string>

    <!-- 검색 -->
    <string name="search_hint">검색어를 입력해주세요.</string>
    <string name="search_recent">최근 검색어</string>
    <string name="search_result"> %s </string>
    <string name="search_result_explain">의 검색 결과입니다.</string>
    <string name="search_type_title">제목</string>
    <string name="search_empty_result">검색하신 결과가 없어요 :(</string>
    <string name="search_research">다시 검색하기</string>
    <string name="search_recommend_title">-정확한 제목을 입력해보세요!</string>
    <string name="search_recommend_filter">-필터를 바꾸어보세요!</string>

    <!-- 토론장 -->
    <string name="discussion_book_search">책 검색</string>
    <string name="discussion_book_searched">고른 책</string>
    <string name="discussion_book_title_search_hint">책 제목을 입력해주세요.</string>
    <string name="discussion_comment_count">댓글 %d개</string>
    <string name="discussion_add_reply">답글 남기기</string>
    <string name="discussion_reply_comment">글 상세 보기</string>

    <!-- 책 관련 -->
    <string name="book_author">저자 : %s</string>
    
    <!-- my -->
    <string name="my_prose">나의 산문</string>
    <string name="my_discussion">나의 토론</string>
    <string name="my_book">나의 책</string>
    <string name="my_bookmark_prose">나만의 책</string>
    <string name="my_read_book">내가 읽은 책</string>
    <string name="my_app">앱 이용</string>
    <string name="my_account">계정</string>
    <string name="my_logout_dialog">로그아웃 하시겠습니까?</string>
    <string name="my_unregister_dialog">정말로 탈퇴 하시겠습니까?</string>
    <string name="dare_story_email">darestory2024@gmail.com</string>

    <!-- 다이얼로그 -->
    <string name="dialog_delete_title">삭제 하시겠습니까?</string>
    <string name="dialog_delete_content">삭제된 글은 복구되지 않습니다.</string>

    <!-- 다이얼로그 에러처리 -->
    <string name="dialog_server_error_title">서버 점검 중</string>
    <string name="dialog_version_error_title">앱 버전</string>
    <string name="dialog_version_error_content">앱 버전이 일치하지 않습니다.\n업데이트를 진행해주세요!</string>
    <string name="dialog_delete_prose_error_title">존재하지 않는 산문</string>
    <string name="dialog_delete_discussion_error_title">존재하지 않는 토론장</string>
    <string name="dialog_delete_prose_error_content">이 글은 삭제되었습니다.</string>
    <string name="dialog_delete_comment_error_title">존재하지 않는 댓글</string>
    <string name="dialog_delete_comment_error_content">이 댓글은 삭제되었습니다.</string>
    <string name="dialog_my_info_error_title">정보 가져오기 오류</string>
    <string name="dialog_my_info_error_content">정보를 불러오는데 실패했습니다.\n로그인 페이지로 이동합니다.</string>
    <string name="dialog_my_prose_empty_title">산문이 없어요!</string>
    <string name="dialog_my_prose_empty_content">지금 작가님만의 산문을 작성해주세요!</string>
    <string name="dialog_my_discussion_empty_title">토론이 없어요!</string>
    <string name="dialog_my_discussion_empty_content">지금 작가님만의 토론을 작성해주세요!</string>

    <!-- Toast 에러 -->
    <string name="toast_error_check_book">책을 선택해주세요.</string>
    <string name="toast_error_check_write_title">제목을 입력해주세요.</string>
    <string name="toast_error_check_write_content">내용을 입력해주세요.</string>
    <string name="toast_error_upload_fail">글 업로드에 실패하였습니다. 다시 시도해주세요.</string>
    <string name="toast_error_length_nick_name">2글자 이상, 10글자 이하인 닉네임만 가능합니다.</string>
    <string name="toast_error_duplicate_nick_name">중복된 닉네임 입니다.</string>
    <string name="toast_error_book_upload_fail">책 추리에 실패하였습니다. 다시 시도해주세요.</string>

</resources>