<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="com.example.darestory.ui.main.search.result.ResultSearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/background"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/constrainT_layout_search_top"
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <ImageView
                android:id="@+id/image_btn_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:onClick="@{()->vm.onClickBackBtn()}"
                android:layout_marginStart="16dp"
                android:background="@drawable/ic_back_white"
                android:layout_width="24dp"
                android:layout_height="24dp"/>

            <ImageView
                android:id="@+id/image_serach"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_btn_back"
                android:layout_marginStart="4dp"
                android:background="@drawable/ic_search_white"
                android:layout_width="20dp"
                android:layout_height="20dp"/>

            <EditText
                android:id="@+id/edit_text_search"
                app:layout_constraintTop_toTopOf="@id/image_serach"
                app:layout_constraintBottom_toBottomOf="@id/image_serach"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:text="@={vm.uiState.searchContent}"
                android:afterTextChanged="@{()->vm.onSearchContentTextChangedAfter()}"
                app:layout_constraintStart_toEndOf="@id/image_serach"
                android:layout_marginStart="8dp"
                android:textColorHint="@color/gray_600"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:imeOptions="actionSearch"
                android:textColor="@color/white"
                android:inputType="text"
                android:lines="1"
                android:textAppearance="@style/title1"
                android:hint="@string/search_hint"
                android:background="@drawable/bg_line_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <ImageView
                app:layout_constraintTop_toBottomOf="@id/edit_text_search"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@id/image_serach"
                app:layout_constraintEnd_toEndOf="@id/edit_text_search"
                android:background="@{vm.uiState.searchContentIsEmpty == true ? @drawable/img_line_gray_600 : @drawable/img_line_dark_purple_600}"
                android:layout_width="0dp"
                android:layout_height="1dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/text_result_search"
            app:layout_constraintTop_toBottomOf="@id/constrainT_layout_search_top"
            android:layout_marginTop="12dp"
            android:textAppearance="@style/title2"
            android:textColor="@color/gray_200"
            android:text="@string/search_result"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="@color/gray_200"
            android:textAppearance="@style/body2"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@id/text_result_search"
            android:text="@string/search_result_explain"
            app:layout_constraintStart_toEndOf="@id/text_result_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <TextView
            android:id="@+id/text_spinner_search_type"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="@{()->vm.onClickTextSpinner()}"
            app:layout_constraintTop_toTopOf="@id/text_result_search"
            app:layout_constraintBottom_toBottomOf="@id/text_result_search"
            android:text="@string/search_type_title"
            android:textAppearance="@style/title2"
            android:textColor="@color/gray_500"
            android:layout_marginEnd="18dp"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <ImageView
            android:background="@drawable/ic_down_triangle_gray_500"
            app:layout_constraintEnd_toEndOf="@id/text_spinner_search_type"
            app:layout_constraintTop_toTopOf="@id/text_spinner_search_type"
            app:layout_constraintBottom_toBottomOf="@id/text_spinner_search_type"
            android:layout_width="10dp"
            android:layout_height="5dp"/>

        <ImageView
            app:layout_constraintTop_toBottomOf="@id/text_spinner_search_type"
            android:layout_marginTop="4dp"
            android:background="@drawable/img_line_gray_500"
            app:layout_constraintStart_toStartOf="@id/text_spinner_search_type"
            app:layout_constraintEnd_toEndOf="@id/text_spinner_search_type"
            android:layout_width="0dp"
            android:layout_height="1dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_result_search"
            app:layout_constraintTop_toBottomOf="@id/text_result_search"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_empty_result"
            app:layout_constraintTop_toBottomOf="@id/text_result_search"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="@{vm.uiState.isResultIsEmpty() ? View.VISIBLE : View.GONE}"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/text_empty_result"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="234dp"
                android:textColor="@color/gray_600"
                android:textAppearance="@style/body2"
                android:text="@string/search_empty_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/text_btn_research"
                app:layout_constraintTop_toBottomOf="@id/text_empty_result"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAppearance="@style/title2"
                android:layout_marginTop="4dp"
                android:onClick="@{()->vm.insertProseRecentSearch()}"
                android:textColor="@color/dark_purple_700"
                android:text="@string/search_research"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/text_recommend_title"
                app:layout_constraintTop_toBottomOf="@id/text_btn_research"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:text="@string/search_recommend_title"
                android:textColor="@color/gray_500"
                android:textAppearance="@style/body3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/text_recommend_filter"
                app:layout_constraintTop_toBottomOf="@id/text_recommend_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="4dp"
                android:text="@string/search_recommend_filter"
                android:textColor="@color/gray_500"
                android:textAppearance="@style/body3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>